# xwasm

./: .gitignore  README.md
contract/: Cargo.toml
contract/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: hash.rs  lib.rs
kvdb/: Cargo.toml
kvdb/src/: lib.rs
par-wasm/: Cargo.toml
par-wasm/src/: constants.rs  hostfunc.rs  lib.rs  types.rs  vm.rs
par-wasm/tests/: twasm.rs
par-wasm/tests/wasmfile/: contract.wasm
parallel/: Cargo.toml
parallel/src/: counters.rs  errors.rs  executor.rs  lib.rs  mutex.rs  mvhashmap.rs  scheduler.rs  state.rs  task.rs  txn_last_input_output.rs  types.rs
statedb/: Cargo.toml
statedb/db/statedb.db/: LOG  LOG.old
statedb/src/: lib.rs
storage/: Cargo.toml
storage/src/: block_store.rs  db.rs  lib.rs  schema.rs  schema_block.rs  schema_txn.rs  tranction_store.rs
types/: Cargo.toml
types/src/: account.rs  address.rs  block.rs  hash.rs  lib.rs  rwset.rs  transaction.rs
vm/: Cargo.toml
vm/src/: constants.rs  hostfunc.rs  impls.rs  lib.rs  traits.rs  types.rs  wasm.rs
wasm/: Cargo.toml
wasm/src/: hostfunc.rs  lib.rs  trait.rs  types.rs  vm.rs  wasmtime.rs  wasmtime_vm.rs
wasm/tests/: twasm.rs
wasm/tests/wasmfile/: contract.wasm
xq/: Cargo.toml
xq-common/: Cargo.toml
xq-common/src/: impls.rs  lib.rs  schema.rs  traits.rs  types.rs
xq-derive/: Cargo.toml
xq-derive/src/: lib.rs
xq-std/: Cargo.toml
xq-std/src/: constants.rs  impls.rs  lib.rs  prims.rs  traits.rs  types.rs
xq-wasm/: Cargo.toml
xq-wasm/src/: instruction.rs  lib.rs  module.rs  opcodes.rs  parse.rs  reader.rs  types.rs  vm.rs
xq/src/: main.rs
xq/xq_test/: contract.wasm  tmp.txt
