[package]
name = "contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xq-std = {path = "../xq-std"}
xq-derive = {path = "../xq-derive"}
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]