[package]
name = "par-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "9.0.0" }
anyhow = "1.0.42"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
types = { path = "../types" }
parallel = { path = "../parallel" }

[dependencies.statedb]
path = "../statedb"

# [[bin]]
# name = "wasm"
# path = "src/main.rs"

[lib]
name = "wasm"
path = "src/lib.rs"
