[package]
name = "xq-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.63", features = [ "full", "extra-traits" ] }
quote = "=1.0.0"
proc-macro2 = "1.0"

[dependencies.xq-common]
path = "../xq-common"
default-features = false

[lib]
proc-macro = true

[features]
wasm-test = []
build-schema = []
