[package]
name = "xq-std"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wee_alloc = "0.4.5"
serde_json = {version = "1.0", default-features = false, features=["alloc"]}
serde = {version = "1.0", default-features = false, features=["alloc"]}
#serde_json = {version = "1.0"}
#serde = {version = "1.0"}
[features]
default = ["std"]
std = []

[lib]
crate-type = ["rlib"]
