[package]
name = "xq"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xq-derive = { path = "../xq-derive" }
xq-std = { path = "../xq-std" }
xq-wasm = { path = "../xq-wasm" }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
